Update tests unitaires