@@ -3,6 +3,8 @@ import fr.fges.formatters.MenuInterface;
 import fr.fges.models.BoardGame;
 import fr.fges.repositories.GameCollectionDao;
 import org.junit.jupiter.api.Test;
+
+import java.util.Collections;
 import java.util.List;
 import static org.mockito.Mockito.*;
 
@@ -16,10 +18,11 @@ class RecommendByPlayerCountTest {
                 new BoardGame("J1", 3, 4, "C1"),
                 new BoardGame("J2", 2, 10, "C2")
         );
-
         when(formatter.getNumberFromUser("Number of players: ")).thenReturn(4);
-        when(dao.findByNumberOfPlayers(4)).thenReturn(games);
+        when(dao.findAllInAlphabeticalOrder(anyList())).thenReturn(games);
+
         entry.handle(formatter, dao);
+
         verify(formatter).displayGames(games);
         verify(formatter, never()).displayMessage(anyString());
     }
@@ -29,10 +32,11 @@ class RecommendByPlayerCountTest {
         MenuInterface formatter = mock(MenuInterface.class);
         GameCollectionDao dao = mock(GameCollectionDao.class);
         RecommendByPlayerCountEntry entry = new RecommendByPlayerCountEntry("Recommend by players");
-
         when(formatter.getNumberFromUser("Number of players: ")).thenReturn(5);
-        when(dao.findByNumberOfPlayers(5)).thenReturn(List.of());
+        when(dao.findAllInAlphabeticalOrder(anyList())).thenReturn(Collections.emptyList());
+
         entry.handle(formatter, dao);
+
         verify(formatter).displayMessage("There is no game for this number of players.");
         verify(formatter, never()).displayGames(any());
     }
